[gd_scene load_steps=63 format=2]

[ext_resource path="res://Movement Stuff/collisionShapes/ladderShape.tres" type="Shape2D" id=1]
[ext_resource path="res://Movement Stuff/AlexStates.gd" type="Script" id=2]
[ext_resource path="res://Movement Stuff/collisionShapes/standShape.tres" type="Shape2D" id=3]
[ext_resource path="res://Movement Stuff/collisionShapes/crouchShape.tres" type="Shape2D" id=4]
[ext_resource path="res://Movement Stuff/_Fall.png" type="Texture" id=5]
[ext_resource path="res://Movement Stuff/Cam.gd" type="Script" id=6]
[ext_resource path="res://Movement Stuff/Chain.tscn" type="PackedScene" id=7]
[ext_resource path="res://Movement Stuff/_Idle.png" type="Texture" id=8]
[ext_resource path="res://Movement Stuff/_Jump.png" type="Texture" id=9]
[ext_resource path="res://Movement Stuff/_CrouchWalk.png" type="Texture" id=10]
[ext_resource path="res://Movement Stuff/Climb.png" type="Texture" id=11]
[ext_resource path="res://Movement Stuff/_Crouch.png" type="Texture" id=12]
[ext_resource path="res://Movement Stuff/_Run.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 42, 0, 42, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 168, 0, 42, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 42, 64, 42, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 168, 64, 42, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 42, 128, 42, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 168, 128, 42, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "climb",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "crouch",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "crouch walk",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "fall",
"speed": 12.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "jump",
"speed": 12.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="Theme" id=5]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.162879, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 8 )
width = 210
height = 40
use_hdr = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Theme" id=4]
ProgressBar/styles/bg = SubResource( 7 )
ProgressBar/styles/fg = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=52]

[node name="AlexStates" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Anim" type="AnimatedSprite" parent="."]
position = Vector2( -2, -23 )
scale = Vector2( 2, 2 )
frames = SubResource( 35 )
animation = "run"
frame = 6
playing = true
flip_h = true

[node name="Tall" type="CollisionShape2D" parent="."]
position = Vector2( 1, 20 )
shape = ExtResource( 3 )

[node name="Short" type="CollisionShape2D" parent="."]
position = Vector2( 1, 28.5 )
shape = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -32
limit_top = -32
limit_right = 1952
limit_bottom = 1080
script = ExtResource( 6 )

[node name="LadderDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Coll" type="CollisionShape2D" parent="LadderDetect"]
position = Vector2( 0, 20 )
shape = ExtResource( 1 )

[node name="Chain" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sizing" type="Control" parent="CanvasLayer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 60.0
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Sizing"]
margin_right = 210.0
margin_bottom = 64.0
theme = SubResource( 5 )
texture = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="hpBar" type="ProgressBar" parent="CanvasLayer/Sizing"]
margin_left = 5.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 35.0
theme = SubResource( 4 )
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coyote" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="GrappleLineDetect" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 10

[node name="Sprite" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 52 )

[connection signal="body_entered" from="LadderDetect" to="." method="_on_LadderDetect_body_entered"]
[connection signal="body_exited" from="LadderDetect" to="." method="_on_LadderDetect_body_exited"]
[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
